--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -37,6 +37,11 @@ $orange: #ff9600;
   box-shadow: 0 3px 10px $blue;
 }
 
+.intro-form {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+
 .sendbtn{
   background: $blue;
   color: white;
