--- a/app/assets/stylesheets/nav-header.scss
+++ b/app/assets/stylesheets/nav-header.scss
@@ -80,7 +80,7 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  text-align: center;
+  // text-align: center;
   color: white;
 }
 header .intro-text {
@@ -90,7 +90,7 @@ header .intro-text {
 
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 300px;
+    padding-top: 200px;
     padding-bottom: 200px;
   }
 }
